# transformer_study

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
flickr/data_utils/: data_utils.py
flickr/model/: caption_decoder.py  image_encoder.py  model.py
model/: base.py  transfromer.py
tokeniser/: tknz_20000.model  tknz_20000.vocab  train_sentencepiece.py
utils/: get_wikitext_103.py
visual_demo/: ff_nonlinearity.ipynb
