[tool.poetry]
name = "transformer-study"
version = "0.1.0"
description = ""
authors = ["Askar Sulaimanov <askarkg12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
tqdm = "^4.67.0"
wandb = "^0.18.6"
datasets = "^3.1.0"
sentencepiece = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
